filters z-index fix

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -13179,7 +13179,7 @@ body #search_filters .clear-all-wrapper {
       content: "\f16d"; }
 
 .products-selection {
-  padding: 12px 0px;     z-index: 25;
+  padding: 12px 0px;
   position: relative;}
   .products-selection .title {
     color: #878787; }
